firebase and buttons
++ integrated firebase into App
++ sign in page and component
++ sign in google and sign out

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "4.9.1",
     "classname": "0.0.0",
     "classnames": "2.2.6",
+    "firebase": "7.14.5",
     "jquery": "3.5.1",
     "lodash": "4.17.15",
     "popper.js": "1.16.1",
