--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classname": "0.0.0",
     "classnames": "2.2.6",
     "firebase": "7.14.5",
+    "jest": "26.0.1",
     "jquery": "3.5.1",
     "lodash": "4.17.15",
     "popper.js": "1.16.1",
