--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ecommerce-forms-02",
+  "name": "react-ecommerce-forms-03",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -26,6 +26,7 @@
     "redux-form": "8.3.5",
     "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
+    "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
     "tinycolor2": "1.4.1"
   },
